include/cassiemujoco.h

typedef struct cassie_sim cassie_sim_t;
typedef struct cassie_vis cassie_vis_t;
typedef struct cassie_state cassie_state_t;
void cassie_sim_set_geom_name_quat(cassie_sim_t *c, const char* name, double *quat);
void cassie_sim_set_geom_name_friction(cassie_sim_t *c, const char* name, double *fric);
void cassie_sim_set_geom_name_pos(cassie_sim_t *c, const char* name, double *pos);
double *cassie_sim_geom_name_pos(cassie_sim_t *c, const char* name);
void cassie_sim_set_body_name_mass(cassie_sim_t *c, const char* name, double mass);
void cassie_sim_set_body_name_pos(cassie_sim_t *c, const char* name, double *data);
double* cassie_sim_get_body_name_pos(cassie_sim_t *c, const char* name);
// Returns true if the visualizer has been closed but not freed.
bool cassie_vis_valid(cassie_vis_t *vis);
// Returns value of vis->paused
bool cassie_vis_paused(cassie_vis_t *vis);
// add a spherical marker for visualization purposes into scene.
void cassie_vis_add_marker(cassie_vis_t* v, double pos[3], double size[3], double rgba[4], double so3[9]);
// remove a visualization marker
void cassie_vis_remove_marker(cassie_vis_t* v, int id);
// remove all visualization markers
void cassie_vis_clear_markers(cassie_vis_t* v);
// update existing marker
void cassie_vis_update_marker_pos(cassie_vis_t* v, int id, double pos[3]);
void cassie_vis_update_marker_size(cassie_vis_t* v, int id, double size[3]);
void cassie_vis_update_marker_rgba(cassie_vis_t* v, int id, double rgba[4]);
void cassie_vis_update_marker_orient(cassie_vis_t* v, int id, double so3[9]);
// Apply inputted perturbation to any body in the vis's mjData
void cassie_vis_apply_force(cassie_vis_t *vis, double xfrc[6], const char* name);
// Does a "full reset", i.e. sets qpos to a starting position and zeros
// out all other data used for computation (like velocities, accelerations, forces)
void cassie_vis_full_reset(cassie_vis_t *sim);
// Remake the visualized mjvScene and mjrContext. Used to update cassie_vis_t
// after some change has been made to the underlying model.
void cassie_vis_remakeSceneCon(cassie_vis_t *v);
// initialize a video renderer
void cassie_vis_init_recording(cassie_vis_t *sim, const char* videofile, int width, int height);
//Record Current frame
void cassie_vis_record_frame(cassie_vis_t *sim);
// close a video renderer
void cassie_vis_close_recording(cassie_vis_t *sim);
// Depth Functions
void cassie_vis_init_depth(cassie_vis_t *v, int width, int height);
float* cassie_vis_draw_depth(cassie_vis_t *v, cassie_sim_t *c, int width, int height);
/*******************************************************************************
 * Cassie simulation state functions
 ******************************************************************************/

// Allocates storage for a Cassie simulation state object. This allows
// the state of a simulator to be recorded and restored without
// duplicating the entire simulator. A simulation state can only be
// restored to the exact simulator instance it was recorded from.
cassie_state_t *cassie_state_alloc(void);
// Creates an instance of a simulation state object with the same
// state as an existing instance.
cassie_state_t *cassie_state_duplicate(const cassie_state_t *src);
// Copies the state of one simulation state object into another.
void cassie_state_copy(cassie_state_t *dst, const cassie_state_t *src);
// Destroys a Cassie simulation state object
void cassie_state_free(cassie_state_t *state);
// Returns a read/write pointer to the simulation state time.
double *cassie_state_time(cassie_state_t *state);
// Returns a read/write pointer to the simulation state joint positions.
double *cassie_state_qpos(cassie_state_t *state);
// Returns a read/write pointer to the simulation state joint velocities.
double *cassie_state_qvel(cassie_state_t *state);
// Copies the state of a Cassie simulator into a simulation state object.
void cassie_get_state(const cassie_sim_t *sim, cassie_state_t *state);
// Copies the state of a simulation state object into a Cassie simulator.
void cassie_set_state(cassie_sim_t *sim, const cassie_state_t *state);