example/cassiemujoco_ctypes.py


cassie_vis_attach_cam = _libraries['./libcassiemujoco.so'].cassie_vis_attach_cam
cassie_vis_attach_cam.restype = None
cassie_vis_attach_cam.argtypes = [POINTER_T(struct_cassie_vis), ctypes.c_char_p]

cassie_vis_draw_depth = _libraries['./libcassiemujoco.so'].cassie_vis_draw_depth
cassie_vis_draw_depth.restype = POINTER_T(ctypes.c_float)
cassie_vis_draw_depth.argtypes = [POINTER_T(struct_cassie_vis), POINTER_T(struct_cassie_sim), ctypes.c_int32, ctypes.c_int32]

cassie_vis_get_depth_size = _libraries['./libcassiemujoco.so'].cassie_vis_get_depth_size
cassie_vis_get_depth_size.restype = ctypes.c_int32
cassie_vis_get_depth_size.argtypes = [POINTER_T(struct_cassie_vis), ctypes.c_int32, ctypes.c_int32]

cassie_vis_init_depth = _libraries['./libcassiemujoco.so'].cassie_vis_init_depth
cassie_vis_init_depth.restype = None
cassie_vis_init_depth.argtypes = [POINTER_T(struct_cassie_vis), ctypes.c_int, ctypes.c_int]

cassie_vis_valid = _libraries['./libcassiemujoco.so'].cassie_vis_valid
cassie_vis_valid.restype = ctypes.c_bool
cassie_vis_valid.argtypes = [POINTER_T(struct_cassie_vis)]

cassie_vis_paused = _libraries['./libcassiemujoco.so'].cassie_vis_paused
cassie_vis_paused.restype = ctypes.c_bool
cassie_vis_paused.argtypes = [POINTER_T(struct_cassie_vis)]

cassie_vis_apply_force = _libraries['./libcassiemujoco.so'].cassie_vis_apply_force
cassie_vis_apply_force.restype = None
cassie_vis_apply_force.argtypes = [POINTER_T(struct_cassie_vis), POINTER_T(ctypes.c_double), ctypes.c_char_p]

cassie_vis_add_marker = _libraries['./libcassiemujoco.so'].cassie_vis_add_marker
cassie_vis_add_marker.restype = None
cassie_vis_add_marker.argtypes = [POINTER_T(struct_cassie_vis), ctypes.c_double * 3, ctypes.c_double * 3, ctypes.c_double * 4, ctypes.c_double * 9]

cassie_vis_remove_marker = _libraries['./libcassiemujoco.so'].cassie_vis_remove_marker
cassie_vis_remove_marker.restype = None
cassie_vis_remove_marker.argtypes = [POINTER_T(struct_cassie_vis), ctypes.c_int]

cassie_vis_clear_markers = _libraries['./libcassiemujoco.so'].cassie_vis_clear_markers
cassie_vis_clear_markers.restype = None
cassie_vis_clear_markers.argtypes = [POINTER_T(struct_cassie_vis)]

cassie_vis_update_marker_pos = _libraries['./libcassiemujoco.so'].cassie_vis_update_marker_pos
cassie_vis_update_marker_pos.restype = None
cassie_vis_update_marker_pos.argtypes = [POINTER_T(struct_cassie_vis), ctypes.c_int, ctypes.c_double * 3]

cassie_vis_update_marker_size = _libraries['./libcassiemujoco.so'].cassie_vis_update_marker_size
cassie_vis_update_marker_size.restype = None
cassie_vis_update_marker_size.argtypes = [POINTER_T(struct_cassie_vis), ctypes.c_int, ctypes.c_double * 3]

cassie_vis_update_marker_rgba = _libraries['./libcassiemujoco.so'].cassie_vis_update_marker_rgba
cassie_vis_update_marker_rgba.restype = None
cassie_vis_update_marker_rgba.argtypes = [POINTER_T(struct_cassie_vis), ctypes.c_int, ctypes.c_double * 4]

cassie_vis_update_marker_orient = _libraries['./libcassiemujoco.so'].cassie_vis_update_marker_orient
cassie_vis_update_marker_orient.restype = None
cassie_vis_update_marker_orient.argtypes = [POINTER_T(struct_cassie_vis), ctypes.c_int, ctypes.c_double * 9]

cassie_vis_full_reset = _libraries['./libcassiemujoco.so'].cassie_vis_full_reset
cassie_vis_full_reset.restype = None
cassie_vis_full_reset.argtypes = [POINTER_T(struct_cassie_vis)]

cassie_vis_remakeSceneCon = _libraries['./libcassiemujoco.so'].cassie_vis_remakeSceneCon
cassie_vis_remakeSceneCon.restype = None
cassie_vis_remakeSceneCon.argtypes = [POINTER_T(struct_cassie_vis)]

cassie_vis_init_recording = _libraries['./libcassiemujoco.so'].cassie_vis_init_recording
cassie_vis_init_recording.restype = None
cassie_vis_init_recording.argtypes = [POINTER_T(struct_cassie_vis), ctypes.c_char_p, ctypes.c_int32, ctypes.c_int32]

cassie_vis_record_frame = _libraries['./libcassiemujoco.so'].cassie_vis_record_frame
cassie_vis_record_frame.restype = None
cassie_vis_record_frame.argtypes = [POINTER_T(struct_cassie_vis)]

cassie_vis_close_recording = _libraries['./libcassiemujoco.so'].cassie_vis_close_recording
cassie_vis_close_recording.restype = None
cassie_vis_close_recording.argtypes = [POINTER_T(struct_cassie_vis)]

cassie_state_alloc = _libraries['./libcassiemujoco.so'].cassie_state_alloc
cassie_state_alloc.restype = POINTER_T(struct_cassie_state)
cassie_state_alloc.argtypes = []

cassie_state_duplicate = _libraries['./libcassiemujoco.so'].cassie_state_duplicate
cassie_state_duplicate.restype = POINTER_T(struct_cassie_state)
cassie_state_duplicate.argtypes = [POINTER_T(struct_cassie_state)]

cassie_state_copy = _libraries['./libcassiemujoco.so'].cassie_state_copy
cassie_state_copy.restype = None
cassie_state_copy.argtypes = [POINTER_T(struct_cassie_state), POINTER_T(struct_cassie_state)]

cassie_state_free = _libraries['./libcassiemujoco.so'].cassie_state_free
cassie_state_free.restype = None
cassie_state_free.argtypes = [POINTER_T(struct_cassie_state)]

cassie_state_time = _libraries['./libcassiemujoco.so'].cassie_state_time
cassie_state_time.restype = POINTER_T(ctypes.c_double)
cassie_state_time.argtypes = [POINTER_T(struct_cassie_state)]

cassie_state_qpos = _libraries['./libcassiemujoco.so'].cassie_state_qpos
cassie_state_qpos.restype = POINTER_T(ctypes.c_double)
cassie_state_qpos.argtypes = [POINTER_T(struct_cassie_state)]

cassie_state_qvel = _libraries['./libcassiemujoco.so'].cassie_state_qvel
cassie_state_qvel.restype = POINTER_T(ctypes.c_double)
cassie_state_qvel.argtypes = [POINTER_T(struct_cassie_state)]

cassie_get_state = _libraries['./libcassiemujoco.so'].cassie_get_state
cassie_get_state.restype = None
cassie_get_state.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(struct_cassie_state)]

cassie_set_state = _libraries['./libcassiemujoco.so'].cassie_set_state
cassie_set_state.restype = None
cassie_set_state.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(struct_cassie_state)]

cassie_sim_read_rangefinder = _libraries['./libcassiemujoco.so'].cassie_sim_read_rangefinder
cassie_sim_read_rangefinder.restype = None
cassie_sim_read_rangefinder.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 6]

#cassie_sim_foot_positions.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 6]

cassie_sim_dof_damping = _libraries['./libcassiemujoco.so'].cassie_sim_dof_damping
cassie_sim_dof_damping.restype = POINTER_T(ctypes.c_double)
cassie_sim_dof_damping.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_set_dof_damping = _libraries['./libcassiemujoco.so'].cassie_sim_set_dof_damping
cassie_sim_set_dof_damping.restype = None
cassie_sim_set_dof_damping.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(ctypes.c_double)]

cassie_sim_body_mass = _libraries['./libcassiemujoco.so'].cassie_sim_body_mass
cassie_sim_body_mass.restype = POINTER_T(ctypes.c_double)
cassie_sim_body_mass.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_set_body_mass = _libraries['./libcassiemujoco.so'].cassie_sim_set_body_mass
cassie_sim_set_body_mass.restype = None
cassie_sim_set_body_mass.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(ctypes.c_double)]

cassie_sim_set_body_name_mass = _libraries['./libcassiemujoco.so'].cassie_sim_set_body_name_mass
cassie_sim_set_body_name_mass.restype = None
cassie_sim_set_body_name_mass.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_char_p, ctypes.c_double]

cassie_sim_body_ipos = _libraries['./libcassiemujoco.so'].cassie_sim_body_ipos
cassie_sim_body_ipos.restype = POINTER_T(ctypes.c_double)
cassie_sim_body_ipos.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_get_body_name_pos = _libraries['./libcassiemujoco.so'].cassie_sim_get_body_name_pos
cassie_sim_get_body_name_pos.restype = POINTER_T(ctypes.c_double)
cassie_sim_get_body_name_pos.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_char_p]

cassie_sim_set_body_name_pos = _libraries['./libcassiemujoco.so'].cassie_sim_set_body_name_pos
cassie_sim_set_body_name_pos.restype = None
cassie_sim_set_body_name_pos.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_char_p, POINTER_T(ctypes.c_double)]

cassie_sim_set_body_ipos = _libraries['./libcassiemujoco.so'].cassie_sim_set_body_ipos
cassie_sim_set_body_ipos.restype = None
cassie_sim_set_body_ipos.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(ctypes.c_double)]

cassie_sim_geom_friction = _libraries['./libcassiemujoco.so'].cassie_sim_geom_friction
cassie_sim_geom_friction.restype = POINTER_T(ctypes.c_double)
cassie_sim_geom_friction.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_set_geom_friction = _libraries['./libcassiemujoco.so'].cassie_sim_set_geom_friction
cassie_sim_set_geom_friction.restype = None
cassie_sim_set_geom_friction.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(ctypes.c_double)]

cassie_sim_set_geom_name_friction = _libraries['./libcassiemujoco.so'].cassie_sim_set_geom_name_friction
cassie_sim_set_geom_name_friction.restype = None
cassie_sim_set_geom_name_friction.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_char_p, POINTER_T(ctypes.c_double)]

cassie_sim_geom_rgba = _libraries['./libcassiemujoco.so'].cassie_sim_geom_rgba
cassie_sim_geom_rgba.restype = POINTER_T(ctypes.c_float)
cassie_sim_geom_rgba.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_geom_name_rgba = _libraries['./libcassiemujoco.so'].cassie_sim_geom_name_rgba
cassie_sim_geom_name_rgba.restype = POINTER_T(ctypes.c_float)
cassie_sim_geom_name_rgba.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_char_p]

cassie_sim_set_geom_rgba = _libraries['./libcassiemujoco.so'].cassie_sim_set_geom_rgba
cassie_sim_set_geom_rgba.restype = None
cassie_sim_set_geom_rgba.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(ctypes.c_float)]

cassie_sim_set_geom_name_rgba = _libraries['./libcassiemujoco.so'].cassie_sim_set_geom_name_rgba
cassie_sim_set_geom_name_rgba.restype = None
cassie_sim_set_geom_name_rgba.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_char_p, POINTER_T(ctypes.c_float)]

cassie_sim_geom_quat = _libraries['./libcassiemujoco.so'].cassie_sim_geom_quat
cassie_sim_geom_quat.restype = POINTER_T(ctypes.c_double)
cassie_sim_geom_quat.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_geom_name_quat = _libraries['./libcassiemujoco.so'].cassie_sim_geom_name_quat
cassie_sim_geom_name_quat.restype = POINTER_T(ctypes.c_double)
cassie_sim_geom_name_quat.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_char_p]

cassie_sim_set_geom_quat = _libraries['./libcassiemujoco.so'].cassie_sim_set_geom_quat
cassie_sim_set_geom_quat.restype = None
cassie_sim_set_geom_quat.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(ctypes.c_double)]

cassie_sim_set_geom_name_quat = _libraries['./libcassiemujoco.so'].cassie_sim_set_geom_name_quat
cassie_sim_set_geom_name_quat.restype = None
cassie_sim_set_geom_name_quat.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_char_p, POINTER_T(ctypes.c_double)]

cassie_sim_geom_pos = _libraries['./libcassiemujoco.so'].cassie_sim_geom_pos
cassie_sim_geom_pos.restype = POINTER_T(ctypes.c_double)
cassie_sim_geom_pos.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_geom_name_pos = _libraries['./libcassiemujoco.so'].cassie_sim_geom_name_pos
cassie_sim_geom_name_pos.restype = POINTER_T(ctypes.c_double)
cassie_sim_geom_name_pos.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_char_p]

cassie_sim_set_geom_pos = _libraries['./libcassiemujoco.so'].cassie_sim_set_geom_pos
cassie_sim_set_geom_pos.restype = None
cassie_sim_set_geom_pos.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(ctypes.c_double)]

cassie_sim_set_geom_name_pos = _libraries['./libcassiemujoco.so'].cassie_sim_set_geom_name_pos
cassie_sim_set_geom_name_pos.restype = None
cassie_sim_set_geom_name_pos.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_char_p, POINTER_T(ctypes.c_double)]

cassie_sim_geom_size = _libraries['./libcassiemujoco.so'].cassie_sim_geom_size
cassie_sim_geom_size.restype = POINTER_T(ctypes.c_double)
cassie_sim_geom_size.argtypes = [POINTER_T(struct_cassie_sim)]
